build: add --enable-native-access=ALL-UNNAMED to get rid of a warning